--- a/application/templates/OregonWildlifeClassifier.html
+++ b/application/templates/OregonWildlifeClassifier.html
@@ -2,7 +2,7 @@
 
 {% block project_image %}
 {% load static %}
-    <img class="project-intro-img" src="https://i.ibb.co/m0yc5yb/Logo.png" alt="">
+    <img class="project-intro-img" src="{% static 'images/OregonLogo.png' %}" alt="">
     <h2>A Wildlife Classifier Using Machine Learning</h2>
 {% endblock %}
 
