--- a/application/templates/TunerPro.html
+++ b/application/templates/TunerPro.html
@@ -2,8 +2,7 @@
 
 {% block project_image %}
 {% load static %}
-    <img class="project-intro-img" src="{% static 'images/PocketTravel/Logo.png' %}" alt="">
-    <h2>A Music Tunner Hardware Application</h2>
+    <img class="project-intro-img" src="{% static 'images/TunerProLogo.png' %}" alt="">
 {% endblock %}
 
 {% block sidebar_content %}
