--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -65,7 +65,7 @@
             </div>
             <span class="navbar-text small text-truncate mt-1 w-25 text-right order-1 order-md-last">always show</span>
         </nav>
-        <div class="container-fluid" style="min-height: 100vh;">
+        <div class="container-fluid" style="min-height: 100vh; padding: 0 !important;">
             {% block content %}{% endblock %}
         </div>
         <button type="button" class="btn btn-floating btn-lg" id="btn-back-to-top" style="background-color: #778e90; color: white; z-index: 99;">
