--- a/application/templates/FullMonteWeb.html
+++ b/application/templates/FullMonteWeb.html
@@ -2,8 +2,7 @@
 
 {% block project_image %}
 {% load static %}
-    <img class="project-intro-img" src="https://i.ibb.co/m0yc5yb/Logo.png" alt="">
-    <h2>A Web-based Photodynamic Therapy Planning and Optimization Application</h2>
+    <img class="project-intro-img" src="{% static 'images/FullMonteLogo.png' %}" alt="">
 {% endblock %}
 
 {% block sidebar_content %}
