--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -86,7 +86,7 @@
     </div>
 </section>
 
-<section class="home-cs-selected home-card" style="padding-top:20vh;">
+<section class="home-cs-selected home-card" id="cs-selected" style="padding-top:20vh;">
     <div class="card text-center mx-auto project-background-card">
         <div class="card-header">
             <h2 class="card-title" style="color: white;"> Software/Hardware Project Highlights 💻</h2>
@@ -171,7 +171,7 @@
     
 </section>
 
-<section class="home-selected-arts home-card" style="padding-top:20vh;">
+<section class="home-selected-arts home-card" id="selected-arts" style="padding-top:20vh;">
     <div class="card text-center mx-auto project-background-card">
         <div class="card-header">
             <h2 class="card-title" style="color: white;">  Artwork Highlights 🖌</h2>
